Address all PR review feedback, add TKF test coverage
Review fixes:
- Static imports for AmlCheckType, Collectors.toList, Mockito methods
- Move runTkfRiskLevelCheck before event publishing
- JdbcClient instead of legacy JdbcTemplate
- List.of() instead of Collections.emptyList()
- Private visibility for runTkfRiskLevelCheck and addTkfCheckIfMissing
- @DataJpaTest integration test replaces mocked unit test
- H2 migration V1_99_3 replaces TkfRiskTestDataFixtures
- No @DisplayName, AssertJ assertions in new tests

Test coverage added:
- 5 TKF unit tests in RiskLevelServiceTest
- 2 TKF integration tests in RiskLevelServiceIntegrationTest

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>